benerin yg masih ngaco...

--- a/data/olx/coba_bersihin.ipynb
+++ b/data/olx/coba_bersihin.ipynb
@@ -155,12 +155,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apartemen(df):\n",
+    "def tipe_property(df):\n",
     "    df_copy = df.copy()\n",
     "    df_copy['desc'] = df_copy['desc'].apply(lambda x:str(x).lower())\n",
-    "    df_copy['tipe'] = df_copy['desc'].apply(lambda x:'Apartemen' if ('apartement' in x)\\\n",
-    "                                                       or ('apartemen' in x) \\\n",
-    "                                                      or ('apt' in x) else 'Rumah')\n",
+    "    df_copy['tipe_property'] = df_copy['desc'].apply(\n",
+    "        lambda x:'Rumah' if ('rumah' in x) else 'Apartemen')\n",
     "    return df_copy"
    ]
   },
@@ -247,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = apartemen(df)"
+    "df = tipe_property(df)"
    ]
   },
   {
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +395,7 @@
        "51"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -441,52 +440,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Pondok Melati,Ciledug,Bekasi Barat,Karang Tengah,Larangan,Pondok Gede,Cipondoh,Medan Satria\n",
     "#Benda bukan di jakarta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1961 entries, 0 to 2366\n",
-      "Data columns (total 17 columns):\n",
-      " #   Column           Non-Null Count  Dtype  \n",
-      "---  ------           --------------  -----  \n",
-      " 0   Unnamed: 0       1961 non-null   int64  \n",
-      " 1   desc             1961 non-null   object \n",
-      " 2   fasilitas_total  1512 non-null   object \n",
-      " 3   kamar            1961 non-null   object \n",
-      " 4   km               1961 non-null   object \n",
-      " 5   lantai           1786 non-null   float64\n",
-      " 6   lb               1961 non-null   float64\n",
-      " 7   lokasi           1961 non-null   object \n",
-      " 8   lt               1961 non-null   float64\n",
-      " 9   price            1961 non-null   int64  \n",
-      " 10  sertifikat       1875 non-null   object \n",
-      " 11  tipe             1961 non-null   object \n",
-      " 12  ada_garasi       1961 non-null   int64  \n",
-      " 13  taman            1961 non-null   int64  \n",
-      " 14  pool             1961 non-null   int64  \n",
-      " 15  gym              1961 non-null   int64  \n",
-      " 16  electricity      1961 non-null   object \n",
-      "dtypes: float64(3), int64(6), object(8)\n",
-      "memory usage: 275.8+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
    ]
   },
   {
@@ -500,32 +459,384 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1961 entries, 0 to 2366\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   km           1961 non-null   object \n",
-      " 1   kamar        1961 non-null   object \n",
-      " 2   lb           1961 non-null   float64\n",
-      " 3   lt           1961 non-null   float64\n",
-      " 4   tipe         1961 non-null   object \n",
-      " 5   price        1961 non-null   int64  \n",
-      " 6   sertifikat   1875 non-null   object \n",
-      " 7   desc         1961 non-null   object \n",
-      " 8   lokasi       1961 non-null   object \n",
-      " 9   ada_garasi   1961 non-null   int64  \n",
-      " 10  pool         1961 non-null   int64  \n",
-      " 11  taman        1961 non-null   int64  \n",
-      " 12  electricity  1961 non-null   object \n",
-      " 13  lantai       1786 non-null   float64\n",
-      " 14  gym          1961 non-null   int64  \n",
-      "dtypes: float64(3), int64(5), object(7)\n",
-      "memory usage: 245.1+ KB\n"
+      "Data columns (total 18 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   Unnamed: 0       1961 non-null   int64  \n",
+      " 1   desc             1961 non-null   object \n",
+      " 2   fasilitas_total  1512 non-null   object \n",
+      " 3   kamar            1961 non-null   object \n",
+      " 4   km               1961 non-null   object \n",
+      " 5   lantai           1786 non-null   float64\n",
+      " 6   lb               1961 non-null   float64\n",
+      " 7   lokasi           1961 non-null   object \n",
+      " 8   lt               1961 non-null   float64\n",
+      " 9   price            1961 non-null   int64  \n",
+      " 10  sertifikat       1961 non-null   int64  \n",
+      " 11  tipe             1961 non-null   object \n",
+      " 12  ada_garasi       1961 non-null   int64  \n",
+      " 13  tipe_property    1961 non-null   object \n",
+      " 14  taman            1961 non-null   int64  \n",
+      " 15  pool             1961 non-null   int64  \n",
+      " 16  gym              1961 non-null   int64  \n",
+      " 17  electricity      1961 non-null   object \n",
+      "dtypes: float64(3), int64(7), object(8)\n",
+      "memory usage: 291.1+ KB\n"
      ]
     }
    ],
    "source": [
-    "df[['km','kamar','lb','lt','tipe','price','sertifikat','desc',\n",
-    "     'lokasi','ada_garasi','pool','taman','electricity','lantai','gym']].info()"
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['km','kamar','lb','lt','tipe_property','price','sertifikat','desc',\n",
+    "     'lokasi','ada_garasi','pool','taman','electricity','lantai','gym']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = ['kamar_mandi','kamar','lb','lt','tipe_property','price','sertifikat','deskripsi',\n",
+    "     'lokasi','ada_garasi','pool','taman','electricity','floors_total','gym']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "not_include =['Pondok Melati', 'Ciledug', 'Bekasi Barat', 'Karang Tengah', 'Larangan',\n",
+    "    'Pondok Gede', 'Cipondoh', 'Medan Satria', 'Benda']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[~df['lokasi'].isin(not_include)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kamar_mandi</th>\n",
+       "      <th>kamar</th>\n",
+       "      <th>lb</th>\n",
+       "      <th>lt</th>\n",
+       "      <th>tipe_property</th>\n",
+       "      <th>price</th>\n",
+       "      <th>sertifikat</th>\n",
+       "      <th>deskripsi</th>\n",
+       "      <th>lokasi</th>\n",
+       "      <th>ada_garasi</th>\n",
+       "      <th>pool</th>\n",
+       "      <th>taman</th>\n",
+       "      <th>electricity</th>\n",
+       "      <th>floors_total</th>\n",
+       "      <th>gym</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>Rumah</td>\n",
+       "      <td>2800000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['dijual rumah 2.5 lantai', 'kamar tidur 7', '...</td>\n",
+       "      <td>Kelapa Gading</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Apartemen</td>\n",
+       "      <td>695000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['spesifikasi :', 'ukuran 3.5 x 6', 'listrik 2...</td>\n",
+       "      <td>Cempaka Putih</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>&gt;10</td>\n",
+       "      <td>387.0</td>\n",
+       "      <td>299.0</td>\n",
+       "      <td>Rumah</td>\n",
+       "      <td>5900000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>['nego sampe deal', 'usaha kost', 'luas tanah ...</td>\n",
+       "      <td>Pancoran</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>209.0</td>\n",
+       "      <td>209.0</td>\n",
+       "      <td>Apartemen</td>\n",
+       "      <td>4300000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['kode listingan : rj3133at20\\t', '( mohon seb...</td>\n",
+       "      <td>Kebon Jeruk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>Apartemen</td>\n",
+       "      <td>850000001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['dijual apartemen 3 br bassura city jakarta t...</td>\n",
+       "      <td>Cakung</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2360</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>324.0</td>\n",
+       "      <td>Rumah</td>\n",
+       "      <td>3099000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['kode listing : iqb 010 rj', none, 'di jual r...</td>\n",
+       "      <td>Pesanggrahan</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6600</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2361</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>Apartemen</td>\n",
+       "      <td>600000088</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['- boston residence bintaro (739 juta nego)',...</td>\n",
+       "      <td>Cilandak</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2362</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Rumah</td>\n",
+       "      <td>1500000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['vine property ', none, 'for sale!!', 'rumah ...</td>\n",
+       "      <td>Pasar Minggu</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2363</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>Rumah</td>\n",
+       "      <td>1280000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['deskripsi', none, 'miliki hunian rumah denga...</td>\n",
+       "      <td>Pancoran</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2366</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>Rumah</td>\n",
+       "      <td>3200000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['jual rumah di kebun jeruk indah, jakarta bar...</td>\n",
+       "      <td>Kembangan</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1927 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     kamar_mandi kamar     lb     lt  ... taman  electricity  floors_total gym\n",
+       "0              3     7  220.0  120.0  ...     0            0           3.0   0\n",
+       "1              1     1   40.0   21.0  ...     0         2200           2.0   0\n",
+       "2              7   >10  387.0  299.0  ...     0         5000           3.0   0\n",
+       "3              4     4  209.0  209.0  ...     0            0           2.0   0\n",
+       "4              2     3   42.0   42.0  ...     1            0          16.0   0\n",
+       "...          ...   ...    ...    ...  ...   ...          ...           ...  ..\n",
+       "2360           3     3  215.0  324.0  ...     0         6600           2.0   0\n",
+       "2361           2     3   48.0   60.0  ...     0            0           2.0   0\n",
+       "2362           2     3  110.0   65.0  ...     0            0           2.0   0\n",
+       "2363           2     3   91.0   61.0  ...     0            0           2.0   0\n",
+       "2366           3     3  205.0  144.0  ...     0         3500           2.0   0\n",
+       "\n",
+       "[1927 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1927 entries, 0 to 2366\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   kamar_mandi    1927 non-null   object \n",
+      " 1   kamar          1927 non-null   object \n",
+      " 2   lb             1927 non-null   float64\n",
+      " 3   lt             1927 non-null   float64\n",
+      " 4   tipe_property  1927 non-null   object \n",
+      " 5   price          1927 non-null   int64  \n",
+      " 6   sertifikat     1927 non-null   int64  \n",
+      " 7   deskripsi      1927 non-null   object \n",
+      " 8   lokasi         1927 non-null   object \n",
+      " 9   ada_garasi     1927 non-null   int64  \n",
+      " 10  pool           1927 non-null   int64  \n",
+      " 11  taman          1927 non-null   int64  \n",
+      " 12  electricity    1927 non-null   object \n",
+      " 13  floors_total   1754 non-null   float64\n",
+      " 14  gym            1927 non-null   int64  \n",
+      "dtypes: float64(3), int64(6), object(6)\n",
+      "memory usage: 240.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
