benerin yg masih ngaco...

--- a/data/lamudi/coba_bersihin.ipynb
+++ b/data/lamudi/coba_bersihin.ipynb
@@ -229,7 +229,8 @@
     "    df_copy = df.copy()\n",
     "    df_copy['deskripsi'] = df_copy['deskripsi'].apply(lambda x:str(x).lower())\n",
     "    df_copy['tipe_property'] = df_copy['deskripsi'].apply(\n",
-    "        lambda x:'Rumah' if ('rumah' in x) else 'Apartemen')\n",
+    "        lambda x:'Rumah' if ('rumah' in x) else 'Ruko' if ('ruko' in x) else\\\n",
+    "        'Apartemen' if ('apartemen'  in x) or ('apt' in x) else \"lainnya\")\n",
     "    return df_copy"
    ]
   },
@@ -424,11 +425,11 @@
       "text/plain": [
        "0            Rumah\n",
        "1            Rumah\n",
-       "2        Apartemen\n",
-       "3        Apartemen\n",
-       "4        Apartemen\n",
+       "2          lainnya\n",
+       "3          lainnya\n",
+       "4          lainnya\n",
        "           ...    \n",
-       "15820    Apartemen\n",
+       "15820         Ruko\n",
        "15821        Rumah\n",
        "15822        Rumah\n",
        "15823        Rumah\n",
@@ -896,7 +897,7 @@
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>lainnya</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -932,7 +933,7 @@
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>lainnya</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -968,7 +969,7 @@
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>lainnya</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1040,7 +1041,7 @@
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>Ruko</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1387,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1482,7 @@
        "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2500.0</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>lainnya</td>\n",
        "      <td>3.25e+10</td>\n",
        "      <td>1</td>\n",
        "      <td>tanah pinggir jalan raya kebagusan. tidak jauh...</td>\n",
@@ -1499,7 +1500,7 @@
        "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3370.0</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>lainnya</td>\n",
        "      <td>4.72e+10</td>\n",
        "      <td>1</td>\n",
        "      <td>dijual tanah cocok utk dibangun cluster di jl ...</td>\n",
@@ -1517,7 +1518,7 @@
        "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1692.0</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>lainnya</td>\n",
        "      <td>2.12e+10</td>\n",
        "      <td>1</td>\n",
        "      <td>tanah pinggir jalan raya kebagusan dekat tb si...</td>\n",
@@ -1553,7 +1554,7 @@
        "      <td>5.0</td>\n",
        "      <td>545.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>Ruko</td>\n",
        "      <td>1.20e+10</td>\n",
        "      <td>0</td>\n",
        "      <td>wts turun harga....ruko central park, jl.s par...</td>\n",
@@ -1659,7 +1660,7 @@
        "[13844 rows x 15 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1688,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1773,7 @@
        "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2500.0</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>lainnya</td>\n",
        "      <td>3.25e+10</td>\n",
        "      <td>1</td>\n",
        "      <td>tanah pinggir jalan raya kebagusan. tidak jauh...</td>\n",
@@ -1790,7 +1791,7 @@
        "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3370.0</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>lainnya</td>\n",
        "      <td>4.72e+10</td>\n",
        "      <td>1</td>\n",
        "      <td>dijual tanah cocok utk dibangun cluster di jl ...</td>\n",
@@ -1808,7 +1809,7 @@
        "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1692.0</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>lainnya</td>\n",
        "      <td>2.12e+10</td>\n",
        "      <td>1</td>\n",
        "      <td>tanah pinggir jalan raya kebagusan dekat tb si...</td>\n",
@@ -1844,7 +1845,7 @@
        "      <td>5.0</td>\n",
        "      <td>545.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Apartemen</td>\n",
+       "      <td>Ruko</td>\n",
        "      <td>1.20e+10</td>\n",
        "      <td>0</td>\n",
        "      <td>wts turun harga....ruko central park, jl.s par...</td>\n",
@@ -1950,7 +1951,7 @@
        "[13841 rows x 15 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1961,10 +1962,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 13841 entries, 0 to 15824\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   kamar_mandi    13841 non-null  float64\n",
+      " 1   kamar          13841 non-null  float64\n",
+      " 2   lb             13126 non-null  float64\n",
+      " 3   lt             10573 non-null  float64\n",
+      " 4   tipe_property  13841 non-null  object \n",
+      " 5   price          13830 non-null  float64\n",
+      " 6   sertifikat     13841 non-null  int64  \n",
+      " 7   deskripsi      13841 non-null  object \n",
+      " 8   lokasi         13472 non-null  object \n",
+      " 9   ada_garasi     13841 non-null  int64  \n",
+      " 10  pool           13841 non-null  int64  \n",
+      " 11  taman          13841 non-null  int64  \n",
+      " 12  electricity    13391 non-null  float64\n",
+      " 13  floors_total   13833 non-null  float64\n",
+      " 14  gym            13841 non-null  int64  \n",
+      "dtypes: float64(7), int64(5), object(3)\n",
+      "memory usage: 1.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#tipe property di check lagi"
+   ]
   }
  ],
  "metadata": {
