--- a/data/olx/coba_bersihin.ipynb
+++ b/data/olx/coba_bersihin.ipynb
@@ -157,9 +157,10 @@
    "source": [
     "def tipe_property(df):\n",
     "    df_copy = df.copy()\n",
-    "    df_copy['desc'] = df_copy['desc'].apply(lambda x:str(x).lower())\n",
-    "    df_copy['tipe_property'] = df_copy['desc'].apply(\n",
-    "        lambda x:'Rumah' if ('rumah' in x) else 'Apartemen')\n",
+    "    df_copy['deskripsi'] = df_copy['deskripsi'].apply(lambda x:str(x).lower())\n",
+    "    df_copy['tipe_property'] = df_copy['deskripsi'].apply(\n",
+    "        lambda x:'Rumah' if ('rumah' in x) else 'Ruko' if ('ruko' in x) else\\\n",
+    "        'Apartemen' if ('apartemen'  in x) or ('apt' in x) else \"lainnya\")\n",
     "    return df_copy"
    ]
   },
@@ -844,7 +845,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#tipe property di check lagi"
+   ]
   }
  ],
  "metadata": {
