--- a/data/lamudi/coba_bersihin.ipynb
+++ b/data/lamudi/coba_bersihin.ipynb
@@ -2000,12 +2000,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tipe property di check lagi"
+    "temp.to_csv('csv_(agak)bersih.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
