--- a/data/olx/coba_bersihin.ipynb
+++ b/data/olx/coba_bersihin.ipynb
@@ -842,11 +842,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('csv_bersih.csv')"
+    "df.to_csv('csv_(agak)bersih.csv')"
    ]
   },
   {
