lokasi udah dibenerin

--- a/data/lamudi/coba_bersihin.ipynb
+++ b/data/lamudi/coba_bersihin.ipynb
@@ -1239,13 +1239,13 @@
     "'Johar Baru' : ['Galur', 'Johar Baru', 'Kampung Rawa', 'Tanah Tinggi'],\n",
     "'Kemayoran' : ['Cempaka Baru', 'Gunung Sahari Selatan', 'Harapan Mulya', 'Kebon Kosong',\n",
     "               'Kemayoran', 'Serdang', 'Sumur Batu', 'Utan Panjang'],\n",
-    "'Menteng' : ['Cikini', 'Gondangdia', 'Kebon Sirih', 'Menteng', 'Pegangsaan'],\n",
+    "'Menteng' : ['Cikini', 'Gondangdia', 'Kebon Sirih', 'Menteng', 'Pegangsaan','Thamrin'],\n",
     "'Sawah Besar': ['Gunung Sahari Utara', 'Karang Anyar', 'Kartini', 'Kampung Anyar',\n",
     "                'Mangga Dua Selatan', 'Pasar Baru', 'Gunung Sahari'],\n",
     "'Senen' : ['Bungur', 'Kenari', 'Kramat', 'Kwitang', 'Paseban', 'Senen'],\n",
     "'Tanah Abang' : ['Bendungan Hilir', 'Gelora', 'Kampung Bali', 'Karet Tengsin', \n",
     "                 'Kebon Kacang', 'Kebon Melati', 'Petamburan', 'KH Mas Mansyur',\n",
-    "                'Kebon Kacang Lama'],\n",
+    "                'Kebon Kacang Lama','Gatot Subroto'],\n",
     "'Cilincing' : ['Cilincing', 'Kalibaru', 'Marunda', 'Rorotan','Suka Pura', 'Semper',\n",
     "                'Semper Barat', 'Semper Timur', 'Sukapura'],\n",
     "'Kelapa Gading' : ['Kelapa Gading Barat', 'Kelapa Gading Timur', 'Pegangsaan Dua'],\n",
@@ -1292,7 +1292,8 @@
     "'Pesanggrahan' : ['Bintaro', 'Pesanggrahan', 'Petukangan Selatan', 'Petukangan',\n",
     "                  'Petukangan Utara', 'Ulujami'],\n",
     "'Setiabudi' : ['Guntur', 'Karet Kuningan', 'Karet Semanggi', 'Karet', 'Kuningan Timur',\n",
-    "               'Menteng Atas', 'Pasar Manggis', 'Setiabudi','Kuningan','SetiaBudi'],\n",
+    "               'Menteng Atas', 'Pasar Manggis', 'Setiabudi','Kuningan','SetiaBudi',\n",
+    "               'Sudirman'],\n",
     "'Tebet' : ['Bukit Duri', 'Kebon Baru', 'Manggarai Selatan', 'Manggarai', 'MT Haryono',\n",
     "           'Menteng Dalam', 'Tebet Barat', 'Tebet Timur','Casablanca'],\n",
     "'Cengkareng' : ['Cengkareng Barat', 'Cengkareng Timur', 'Duri Kosambi', \n",
@@ -1323,7 +1324,7 @@
     {
      "data": {
       "text/plain": [
-       "48"
+       "45"
       ]
      },
      "execution_count": 45,
@@ -1350,9 +1351,6 @@
      "output_type": "stream",
      "text": [
       "nan\n",
-      "Sudirman\n",
-      "Gatot Subroto\n",
-      "Thamrin\n",
       "Mekar Wangi\n",
       "Kedungwaringin\n",
       "Cimahpar\n"
@@ -2000,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
