--- a/data/olx/coba_bersihin.ipynb
+++ b/data/olx/coba_bersihin.ipynb
@@ -517,7 +517,7 @@
    "outputs": [],
    "source": [
     "not_include =['Pondok Melati', 'Ciledug', 'Bekasi Barat', 'Karang Tengah', 'Larangan',\n",
-    "    'Pondok Gede', 'Cipondoh', 'Medan Satria', 'Benda']"
+    "    'Pondok Gede', 'Cipondoh', 'Medan Satria', 'Benda', 'Pinang (Penang)']"
    ]
   },
   {
@@ -773,7 +773,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1927 rows × 15 columns</p>\n",
+       "<p>1923 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -790,7 +790,7 @@
        "2363           2     3   91.0   61.0  ...     0            0           2.0   0\n",
        "2366           3     3  205.0  144.0  ...     0         3500           2.0   0\n",
        "\n",
-       "[1927 rows x 15 columns]"
+       "[1923 rows x 15 columns]"
       ]
      },
      "execution_count": 30,
@@ -812,27 +812,27 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1927 entries, 0 to 2366\n",
+      "Int64Index: 1923 entries, 0 to 2366\n",
       "Data columns (total 15 columns):\n",
       " #   Column         Non-Null Count  Dtype  \n",
       "---  ------         --------------  -----  \n",
-      " 0   kamar_mandi    1927 non-null   object \n",
-      " 1   kamar          1927 non-null   object \n",
-      " 2   lb             1927 non-null   float64\n",
-      " 3   lt             1927 non-null   float64\n",
-      " 4   tipe_property  1927 non-null   object \n",
-      " 5   price          1927 non-null   int64  \n",
-      " 6   sertifikat     1927 non-null   int64  \n",
-      " 7   deskripsi      1927 non-null   object \n",
-      " 8   lokasi         1927 non-null   object \n",
-      " 9   ada_garasi     1927 non-null   int64  \n",
-      " 10  pool           1927 non-null   int64  \n",
-      " 11  taman          1927 non-null   int64  \n",
-      " 12  electricity    1927 non-null   object \n",
-      " 13  floors_total   1754 non-null   float64\n",
-      " 14  gym            1927 non-null   int64  \n",
+      " 0   kamar_mandi    1923 non-null   object \n",
+      " 1   kamar          1923 non-null   object \n",
+      " 2   lb             1923 non-null   float64\n",
+      " 3   lt             1923 non-null   float64\n",
+      " 4   tipe_property  1923 non-null   object \n",
+      " 5   price          1923 non-null   int64  \n",
+      " 6   sertifikat     1923 non-null   int64  \n",
+      " 7   deskripsi      1923 non-null   object \n",
+      " 8   lokasi         1923 non-null   object \n",
+      " 9   ada_garasi     1923 non-null   int64  \n",
+      " 10  pool           1923 non-null   int64  \n",
+      " 11  taman          1923 non-null   int64  \n",
+      " 12  electricity    1923 non-null   object \n",
+      " 13  floors_total   1750 non-null   float64\n",
+      " 14  gym            1923 non-null   int64  \n",
       "dtypes: float64(3), int64(6), object(6)\n",
-      "memory usage: 240.9+ KB\n"
+      "memory usage: 240.4+ KB\n"
      ]
     }
    ],
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
