--- a/EDA/Untitled.ipynb
+++ b/EDA/Untitled.ipynb
@@ -941,6 +941,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Statistical Check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "lokasi = [i for i in df['lokasi'].unique()]\n",
+    "pair = {}\n",
+    "for i in lokasi:\n",
+    "    for j in lokasi:\n",
+    "        if j!=i:\n",
+    "            ttest = stats.ttest_ind(a = df[df['lokasi'] == i]['price'],\n",
+    "                                    b = df[df['lokasi'] == j]['price'])\n",
+    "            p_value = ttest.pvalue\n",
+    "            pair[f'{i} - {j}'] = p_value\n",
+    "    lokasi.remove(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "210 651\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for i,j in pair.items():\n",
+    "    if j >= 0.05:\n",
+    "        count += 1\n",
+    "print(count, len(pair))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dari 651 kombinasi terdapat 210 pasangan kecamatan yang tidak memiliki perbedaan harga rumah\n",
+    "(benerin kata2nya)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
