--- a/data/olx/coba_bersihin.ipynb
+++ b/data/olx/coba_bersihin.ipynb
@@ -205,7 +205,7 @@
     "    df_copy['electricity'] = np.zeros(len(df_copy))\n",
     "    df_copy['desc'] = df_copy['desc'].fillna('aaaa')\n",
     "    for i in range(len(df_copy)):\n",
-    "        text = str(df_copy['desc'].iloc[i]).lower()\n",
+    "        text = str(df_copy['desc'].iloc[i]).lower())\n",
     "        try:\n",
     "            cari = re.search('listrik',text)\n",
     "            S = cari.span()\n",
@@ -859,9 +859,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -873,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
